Add HTML CSS cheatsheet for Codecademy homework

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <body>
   <h1>Michael Gardner</h1>
   <p>Welcome to my website!</p>
+  <h2>Codecademy Homework Projects</h2>
+  <a href="html-css-cheatsheet-starting/index.html">HTML Cheatsheet</a>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
