Add Website Style Guide #1 to projects section

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <h1>Michael Gardner</h1>
   <p>Welcome to my website!</p>
   <h2>Codecademy Homework Projects</h2>
-  <p>
+  <p>Projects:
     <ul>
       <li><a href="html-css-cheatsheet-starting/index.html">HTML Cheatsheet</a>
+      <li><a href="BuildAWebsiteDesignSystem/index.html">Website Style Guide #1</a>
 </li>
     </ul>
   </p>
