--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <h2>Codecademy Homework Projects</h2>
   <p>Projects:
     <ul>
-      <li><a href="html-css-cheatsheet-starting/index.html">HTML Cheatsheet</a>
-      <li><a href="BuildAWebsiteDesignSystem/index.html">Website Style Guide #1</a>
-</li>
+      <li><a href="html-css-cheatsheet-starting/index.html">HTML Cheatsheet</a></li>
+      <li><a href="BuildAWebsiteDesignSystem/index.html">Website Style Guide #1</a></li>
+      <li><a href="TeaCozy/index.html">Tea Cozy</a></li>
     </ul>
   </p>
   <p>
