Refactor into new start page for my personal browsers homepages

--- a/index.html
+++ b/index.html
@@ -1,19 +1,48 @@
 <html>
- 
+  <title>Michael's Start Page</title>
+    <link rel="stylesheet" href="static/css/main.css" type="text/css" media="screen" title="no title" charset="utf-8">
+    <script src="static/js/main.js" charset="utf-8"></script>
 <body>
-  <h1>Michael Gardner</h1>
-  <p>Welcome to my website!</p>
-  <h2>Codecademy Homework Projects</h2>
-  <p>Projects:
-    <ul>
-      <li><a href="html-css-cheatsheet-starting/index.html">HTML Cheatsheet</a></li>
-      <li><a href="BuildAWebsiteDesignSystem/index.html">Website Style Guide #1</a></li>
-      <li><a href="TeaCozy/index.html">Tea Cozy</a></li>
-    </ul>
-  </p>
-  <p>
-    <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-  </p>
+  <div class="container">
+    <header>
+      <h1>Michael's Start Page</h1>
+    </header>
+    <main class="links">
+        <a href="https://news.ycombinator.com">
+          <div class="icon">
+            <img src="https://news.ycombinator.com/favicon.ico">
+          </div>
+          <p>Hacker News</p>
+        </a>
+        <a href="https://www.theguardian.com/au"><img src="https://www.theguardian.com/favicon.ico"><p>The Guardian</p></a>
+        <a href="https://www.abc.net.au/news"><img src="https://www.abc.net.au/favicon.ico"><p>ABC News</p></a>
+        <a href="https://www.slashdot.org"><img src="https://www.slashdot.org/favicon.ico"><p>Slashdot</p></a>
+        <a href="https://www.theverge.com"><img src="https://www.theverge.com/favicon.ico"><p>The Verge</p></a>
+        <a href="https://www.arstechnica.com"><img src="https://www.arstechnica.com/favicon.ico"><p>Ars Technica</p></a>
+        <a href="http://news.bbc.co.uk/"><img src="http://news.bbc.co.uk/favicon.ico"><p>BBC News</p></a>
+        <a href="https://phoenixonrails.com/"><img src="https://phoenixonrails.com/favicon.ico"><p>Phoenix On Rails</p></a>
+        <a href="https://www.vox.com/"><img src="static/img/icons/vox.png" ><p>Vox</p></a>
+        <a href="https://drawdb.vercel.app/"><img src="https://drawdb.vercel.app/favicon.ico"><p>DrawDB</p></a>
+        <a href="https://pragmaticstudio.com/"><img src="https://pragmaticstudio.com/favicon.ico"><p>Pragmatic Studio</p></a>
+        <a href="https://techcrunch.com/"><img src="https://techcrunch.com/favicon.ico"><p>Tech Crunch</p></a>
+        <a href="https://www.nyt.com"><img src="https://www.nyt.com/favicon.ico"><p>New York Times</p></a>
+        <a href="https://psyche.co/"><img src="https://psyche.co/favicon.ico"><p>Psyche</p></a>
+        <a href="https://www.strongtowns.org/"><img src="https://www.strongtowns.org/favicon.ico"><p>Strong Towns</p></a>
+        <a href="http://www.slate.com/"><img src="http://www.slate.com/favicon.ico"><p>Slate</p></a>
+        <a href="http://www.npr.org/"><img src="http://www.npr.org/favicon.ico"><p>NPR</p></a>
+        <a href="http://text.npr.org/"><img src="http://text.npr.org/favicon.ico"><p>NPR</p></a>
+        <a href="https://theworld.org"><img src="https://theworld.org/favicon.ico"><p>The World</p></a>
+        <a href="http://www.rollingstone.com/"><img src="static/img/icons/rs.png"><p>Rolling Stone</p></a>
+        <a href="http://www.medialens.org/"><img src="http://www.medialens.org/favicon.ico"><p>Media Lens</p></a>
+        <a href="https://www.reddit.com"><img src="https://www.reddit.com/favicon.ico"><p>Reddit</p></a>
+        <a href="https://old.reddit.com"><img src="https://old.reddit.com/favicon.ico"><p>Old Reddit</p></a>
+        <a href="https://www.theage.com.au"><img src="static/img/icons/theage.png"><p>The Age</p></a>
+        <a href="https://www.smh.com.au"><img src="static/img/icons/smh.png"><p>SMH</p></a>
+    </main>
+    <footer>
+      <p>Created by Michael Gardner</p>
+    </footer>
+  </div>
 </body>
  
 </html>
