Modified design to accommodate a more flexible grid and flexible icon layout

--- a/index.html
+++ b/index.html
@@ -12,32 +12,82 @@
           <div class="icon">
             <img src="https://news.ycombinator.com/favicon.ico">
           </div>
-          <p>Hacker News</p>
+          <span>Hacker News</span>
         </a>
-        <a href="https://www.theguardian.com/au"><img src="https://www.theguardian.com/favicon.ico"><p>The Guardian</p></a>
-        <a href="https://www.abc.net.au/news"><img src="https://www.abc.net.au/favicon.ico"><p>ABC News</p></a>
-        <a href="https://www.slashdot.org"><img src="https://www.slashdot.org/favicon.ico"><p>Slashdot</p></a>
-        <a href="https://www.theverge.com"><img src="https://www.theverge.com/favicon.ico"><p>The Verge</p></a>
-        <a href="https://www.arstechnica.com"><img src="https://www.arstechnica.com/favicon.ico"><p>Ars Technica</p></a>
-        <a href="http://news.bbc.co.uk/"><img src="http://news.bbc.co.uk/favicon.ico"><p>BBC News</p></a>
-        <a href="https://phoenixonrails.com/"><img src="https://phoenixonrails.com/favicon.ico"><p>Phoenix On Rails</p></a>
-        <a href="https://www.vox.com/"><img src="static/img/icons/vox.png" ><p>Vox</p></a>
-        <a href="https://drawdb.vercel.app/"><img src="https://drawdb.vercel.app/favicon.ico"><p>DrawDB</p></a>
-        <a href="https://pragmaticstudio.com/"><img src="https://pragmaticstudio.com/favicon.ico"><p>Pragmatic Studio</p></a>
-        <a href="https://techcrunch.com/"><img src="https://techcrunch.com/favicon.ico"><p>Tech Crunch</p></a>
-        <a href="https://www.nyt.com"><img src="https://www.nyt.com/favicon.ico"><p>New York Times</p></a>
-        <a href="https://psyche.co/"><img src="https://psyche.co/favicon.ico"><p>Psyche</p></a>
-        <a href="https://www.strongtowns.org/"><img src="https://www.strongtowns.org/favicon.ico"><p>Strong Towns</p></a>
-        <a href="http://www.slate.com/"><img src="http://www.slate.com/favicon.ico"><p>Slate</p></a>
-        <a href="http://www.npr.org/"><img src="http://www.npr.org/favicon.ico"><p>NPR</p></a>
-        <a href="http://text.npr.org/"><img src="http://text.npr.org/favicon.ico"><p>NPR</p></a>
-        <a href="https://theworld.org"><img src="https://theworld.org/favicon.ico"><p>The World</p></a>
-        <a href="http://www.rollingstone.com/"><img src="static/img/icons/rs.png"><p>Rolling Stone</p></a>
-        <a href="http://www.medialens.org/"><img src="http://www.medialens.org/favicon.ico"><p>Media Lens</p></a>
-        <a href="https://www.reddit.com"><img src="https://www.reddit.com/favicon.ico"><p>Reddit</p></a>
-        <a href="https://old.reddit.com"><img src="https://old.reddit.com/favicon.ico"><p>Old Reddit</p></a>
-        <a href="https://www.theage.com.au"><img src="static/img/icons/theage.png"><p>The Age</p></a>
-        <a href="https://www.smh.com.au"><img src="static/img/icons/smh.png"><p>SMH</p></a>
+        <a href="https://www.theguardian.com/au">
+          <div class="icon">
+            <img src="https://www.theguardian.com/favicon.ico">
+          </div>
+          <span>The Guardian</span>
+        </a>
+        <a href="https://www.abc.net.au/news">
+          <div class="icon">
+            <img src="https://www.abc.net.au/favicon.ico">
+          </div>
+          <span>ABC News</span>
+        </a>
+        <a href="https://www.slashdot.org">
+          <div class="icon">
+            <img src="https://www.slashdot.org/favicon.ico">
+          </div>
+          <span>Slashdot</span>
+        </a>
+        <a href="https://www.theverge.com">
+          <div class="icon">
+            <img src="https://www.theverge.com/favicon.ico">
+          </div>
+          <span>The Verge</span>
+        </a>
+        <a href="https://www.arstechnica.com">
+          <div class="icon">
+            <img src="https://www.arstechnica.com/favicon.ico">
+          </div>
+          <span>Ars Technica</span>
+        </a>
+        <a href="http://news.bbc.co.uk/">
+          <div class="icon">
+            <img src="http://news.bbc.co.uk/favicon.ico">
+          </div>
+          <span>BBC News</span>
+        </a>
+        <a href="https://phoenixonrails.com/">
+          <div class="icon"><img src="https://phoenixonrails.com/favicon.ico"></div><span>Phoenix On Rails</span></a>
+        <a href="https://developer.mozilla.org/en-US/">
+          <div class="icon"><img src="https://developer.mozilla.org/favicon.ico"></div><span>MDN</span></a>
+        <a href="https://www.vox.com/">
+          <div class="icon"><img src="static/img/icons/vox.png" ></div><span>Vox</span></a>
+        <a href="https://drawdb.vercel.app/">
+          <div class="icon"><img src="https://drawdb.vercel.app/favicon.ico"></div><span>DrawDB</span></a>
+        <a href="https://pragmaticstudio.com/">
+          <div class="icon"><img src="https://pragmaticstudio.com/favicon.ico"></div><span>Pragmatic Studio</span></a>
+        <a href="https://techcrunch.com/">
+          <div class="icon"><img src="https://techcrunch.com/favicon.ico"></div><span>Tech Crunch</span></a>
+        <a href="https://www.nyt.com">
+          <div class="icon"><img src="https://www.nyt.com/favicon.ico"></div><span>New York Times</span></a>
+        <a href="https://psyche.co/">
+          <div class="icon"><img src="https://psyche.co/favicon.ico"></div><span>Psyche</span></a>
+        <a href="https://www.strongtowns.org/">
+          <div class="icon"><img src="https://www.strongtowns.org/favicon.ico"></div><span>Strong Towns</span></a>
+        <a href="http://www.slate.com/">
+          <div class="icon"><img src="http://www.slate.com/favicon.ico"></div><span>Slate</span></a>
+        <a href="http://www.npr.org/">
+          <div class="icon"><img src="http://www.npr.org/favicon.ico"></div><span>NPR</span></a>
+        <a href="http://text.npr.org/">
+          <div class="icon"><img src="http://text.npr.org/favicon.ico"></div><span>NPR</span></a>
+        <a href="https://theworld.org">
+          <div class="icon"><img src="https://theworld.org/favicon.ico"></div><span>The World</span></a>
+        <a href="http://www.rollingstone.com/">
+          <div class="icon"><img src="static/img/icons/rs.png"></div><span>Rolling Stone</span></a>
+        <a href="http://www.medialens.org/">
+          <div class="icon"><img src="http://www.medialens.org/favicon.ico"></div><span>Media Lens</span></a>
+        <a href="https://www.reddit.com">
+          <div class="icon"><img src="https://www.reddit.com/favicon.ico"></div><span>Reddit</span></a>
+        <a href="https://old.reddit.com">
+          <div class="icon"><img src="https://old.reddit.com/favicon.ico"></div><span>Old Reddit</span></a>
+        <a href="https://www.theage.com.au">
+          <div class="icon"><img src="static/img/icons/theage.png"></div><span>The Age</span></a>
+        <a href="https://www.smh.com.au">
+          <div class="icon"><img src="static/img/icons/smh.png"></div><span>SMH</span></a>
     </main>
     <footer>
       <p>Created by Michael Gardner</p>
