--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
   <title>Michael's Start Page</title>
-    <link rel="stylesheet" href="static/css/main.css" type="text/css" media="screen" title="no title" charset="utf-8">
-    <script src="static/js/main.js" charset="utf-8"></script>
-<body>
-  <div class="container">
-    <header>
-      <h1>Michael's Start Page</h1>
-    </header>
-    <main class="links">
+  <link rel="stylesheet" href="static/css/main.css" type="text/css" media="screen" title="no title" charset="utf-8">
+  <script src="static/js/main.js" charset="utf-8"></script>
+  <body>
+    <div class="container">
+      <header>
+        <h1>Michael's Start Page</h1>
+      </header>
+      <main class="links">
         <a href="https://news.ycombinator.com">
           <div class="icon">
             <img src="https://news.ycombinator.com/favicon.ico">
@@ -51,48 +51,180 @@
           <span>BBC News</span>
         </a>
         <a href="https://phoenixonrails.com/">
-          <div class="icon"><img src="https://phoenixonrails.com/favicon.ico"></div><span>Phoenix On Rails</span></a>
+          <div class="icon">
+            <img src="https://phoenixonrails.com/favicon.ico">
+          </div>
+          <span>Phoenix On Rails</span>
+        </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <div class="icon"><img src="https://developer.mozilla.org/favicon.ico"></div><span>MDN</span></a>
+          <div class="icon">
+            <img src="https://developer.mozilla.org/favicon.ico">
+          </div>
+          <span>MDN</span>
+        </a>
         <a href="https://www.vox.com/">
-          <div class="icon"><img src="static/img/icons/vox.png" ></div><span>Vox</span></a>
+          <div class="icon">
+            <img src="static/img/icons/vox.png" >
+          </div>
+            <span>Vox</span>
+        </a>
         <a href="https://drawdb.vercel.app/">
-          <div class="icon"><img src="https://drawdb.vercel.app/favicon.ico"></div><span>DrawDB</span></a>
+          <div class="icon">
+            <img src="https://drawdb.vercel.app/favicon.ico">
+          </div>
+          <span>
+            DrawDB
+          </span>
+        </a>
+
         <a href="https://pragmaticstudio.com/">
-          <div class="icon"><img src="https://pragmaticstudio.com/favicon.ico"></div><span>Pragmatic Studio</span></a>
+          <div class="icon">
+            <img src="https://pragmaticstudio.com/favicon.ico">
+          </div>
+          <span>
+            Pragmatic Studio
+          </span>
+        </a>
+
         <a href="https://techcrunch.com/">
-          <div class="icon"><img src="https://techcrunch.com/favicon.ico"></div><span>Tech Crunch</span></a>
+          <div class="icon">
+            <img src="https://techcrunch.com/favicon.ico">
+          </div>
+          <span>
+            Tech Crunch
+          </span>
+        </a>
+
         <a href="https://www.nyt.com">
-          <div class="icon"><img src="https://www.nyt.com/favicon.ico"></div><span>New York Times</span></a>
+          <div class="icon">
+            <img src="https://www.nyt.com/favicon.ico">
+          </div>
+          <span>
+            New York Times
+          </span>
+        </a>
+
         <a href="https://psyche.co/">
-          <div class="icon"><img src="https://psyche.co/favicon.ico"></div><span>Psyche</span></a>
+          <div class="icon">
+            <img src="https://psyche.co/favicon.ico">
+          </div>
+          <span>
+            Psyche
+          </span>
+        </a>
+
         <a href="https://www.strongtowns.org/">
-          <div class="icon"><img src="https://www.strongtowns.org/favicon.ico"></div><span>Strong Towns</span></a>
+          <div class="icon">
+            <img src="https://www.strongtowns.org/favicon.ico">
+          </div>
+          <span>
+            Strong Towns
+          </span>
+        </a>
+
         <a href="http://www.slate.com/">
-          <div class="icon"><img src="http://www.slate.com/favicon.ico"></div><span>Slate</span></a>
+          <div class="icon">
+            <img src="http://www.slate.com/favicon.ico">
+          </div>
+          <span>
+            Slate
+          </span>
+        </a>
+
         <a href="http://www.npr.org/">
-          <div class="icon"><img src="http://www.npr.org/favicon.ico"></div><span>NPR</span></a>
+          <div class="icon">
+            <img src="http://www.npr.org/favicon.ico">
+          </div>
+          <span>
+            NPR
+          </span>
+        </a>
+
         <a href="http://text.npr.org/">
-          <div class="icon"><img src="http://text.npr.org/favicon.ico"></div><span>NPR</span></a>
+          <div class="icon">
+            <img src="http://text.npr.org/favicon.ico">
+          </div>
+          <span>
+            NPR
+          </span>
+        </a>
+
         <a href="https://theworld.org">
-          <div class="icon"><img src="https://theworld.org/favicon.ico"></div><span>The World</span></a>
+          <div class="icon">
+            <img src="https://theworld.org/favicon.ico">
+          </div>
+          <span>
+            The World
+          </span>
+        </a>
+
         <a href="http://www.rollingstone.com/">
-          <div class="icon"><img src="static/img/icons/rs.png"></div><span>Rolling Stone</span></a>
+          <div class="icon">
+            <img src="static/img/icons/rs.png">
+          </div>
+          <span>
+            Rolling Stone
+          </span>
+        </a>
+
         <a href="http://www.medialens.org/">
-          <div class="icon"><img src="http://www.medialens.org/favicon.ico"></div><span>Media Lens</span></a>
+          <div class="icon">
+            <img src="http://www.medialens.org/favicon.ico">
+          </div>
+          <span>
+            Media Lens
+          </span>
+        </a>
+
         <a href="https://www.reddit.com">
-          <div class="icon"><img src="https://www.reddit.com/favicon.ico"></div><span>Reddit</span></a>
+          <div class="icon">
+            <img src="https://www.reddit.com/favicon.ico">
+          </div>
+          <span>
+            Reddit
+          </span>
+        </a>
+
         <a href="https://old.reddit.com">
-          <div class="icon"><img src="https://old.reddit.com/favicon.ico"></div><span>Old Reddit</span></a>
+          <div class="icon">
+            <img src="https://old.reddit.com/favicon.ico">
+          </div>
+          <span>
+            Old Reddit
+          </span>
+        </a>
+
         <a href="https://www.theage.com.au">
-          <div class="icon"><img src="static/img/icons/theage.png"></div><span>The Age</span></a>
+          <div class="icon">
+            <img src="static/img/icons/theage.png">
+          </div>
+          <span>
+            The Age
+          </span>
+        </a>
+
         <a href="https://www.smh.com.au">
-          <div class="icon"><img src="static/img/icons/smh.png"></div><span>SMH</span></a>
-    </main>
-    <footer>
-      <p>Created by Michael Gardner</p>
-    </footer>
-  </div>
-</body>
- 
+          <div class="icon">
+            <img src="static/img/icons/smh.png">
+          </div>
+          <span>
+            SMH
+          </span>
+        </a>
+
+        <a href="https://www.theregister.com">
+          <div class="icon">
+            <img src="https://www.theregister.com/design_picker/d518b499f8a6e2c65d4d8c49aca8299d54b03012/graphics/icon/vulture_white.png">
+          </div>
+          <span>
+            SMH
+          </span>
+        </a>
+      </main>
+      <footer>
+        <p>Created by Michael Gardner</p>
+      </footer>
+    </div>
+  </body>
+
 </html>
