--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
             <img src="https://www.theregister.com/design_picker/d518b499f8a6e2c65d4d8c49aca8299d54b03012/graphics/icon/vulture_white.png">
           </div>
           <span>
-            SMH
+            The Register 
           </span>
         </a>
       </main>
