Fix TheRegister.com icon background color

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         </a>
 
         <a href="https://www.theregister.com">
-          <div class="icon">
+          <div style="background-color:red;" class="icon">
             <img src="https://www.theregister.com/design_picker/d518b499f8a6e2c65d4d8c49aca8299d54b03012/graphics/icon/vulture_white.png">
           </div>
           <span>
