add blog homepage with simple socials and contactable

--- a/index.html
+++ b/index.html
@@ -1,230 +1,232 @@
 <html>
-  <title>Michael's Start Page</title>
-  <link rel="stylesheet" href="static/css/main.css" type="text/css" media="screen" title="no title" charset="utf-8">
-  <script src="static/js/main.js" charset="utf-8"></script>
-  <body>
-    <div class="container">
-      <header>
-        <h1>Michael's Start Page</h1>
-      </header>
-      <main class="links">
-        <a href="https://news.ycombinator.com">
-          <div class="icon">
-            <img src="https://news.ycombinator.com/favicon.ico">
-          </div>
-          <span>Hacker News</span>
-        </a>
-        <a href="https://www.theguardian.com/au">
-          <div class="icon">
-            <img src="https://www.theguardian.com/favicon.ico">
-          </div>
-          <span>The Guardian</span>
-        </a>
-        <a href="https://www.abc.net.au/news">
-          <div class="icon">
-            <img src="https://www.abc.net.au/favicon.ico">
-          </div>
-          <span>ABC News</span>
-        </a>
-        <a href="https://www.slashdot.org">
-          <div class="icon">
-            <img src="https://www.slashdot.org/favicon.ico">
-          </div>
-          <span>Slashdot</span>
-        </a>
-        <a href="https://www.theverge.com">
-          <div class="icon">
-            <img src="https://www.theverge.com/favicon.ico">
-          </div>
-          <span>The Verge</span>
-        </a>
-        <a href="https://www.arstechnica.com">
-          <div class="icon">
-            <img src="https://www.arstechnica.com/favicon.ico">
-          </div>
-          <span>Ars Technica</span>
-        </a>
-        <a href="http://news.bbc.co.uk/">
-          <div class="icon">
-            <img src="http://news.bbc.co.uk/favicon.ico">
-          </div>
-          <span>BBC News</span>
-        </a>
-        <a href="https://phoenixonrails.com/">
-          <div class="icon">
-            <img src="https://phoenixonrails.com/favicon.ico">
-          </div>
-          <span>Phoenix On Rails</span>
-        </a>
-        <a href="https://developer.mozilla.org/en-US/">
-          <div class="icon">
-            <img src="https://developer.mozilla.org/favicon.ico">
-          </div>
-          <span>MDN</span>
-        </a>
-        <a href="https://www.vox.com/">
-          <div class="icon">
-            <img src="static/img/icons/vox.png" >
-          </div>
-            <span>Vox</span>
-        </a>
-        <a href="https://drawdb.vercel.app/">
-          <div class="icon">
-            <img src="https://drawdb.vercel.app/favicon.ico">
-          </div>
-          <span>
-            DrawDB
-          </span>
-        </a>
+<title>Michael's Start Page</title>
+<link rel="stylesheet" href="static/css/main.css" type="text/css" media="screen" title="no title" charset="utf-8">
+<script src="static/js/main.js" charset="utf-8"></script>
 
-        <a href="https://pragmaticstudio.com/">
-          <div class="icon">
-            <img src="https://pragmaticstudio.com/favicon.ico">
-          </div>
-          <span>
-            Pragmatic Studio
-          </span>
-        </a>
+<body>
+  <div class="container">
+    <header>
+      <h1>Michael's Start Page</h1>
+    </header>
+    <main class="links">
+      <a href="https://news.ycombinator.com">
+        <div class="icon">
+          <img src="https://news.ycombinator.com/favicon.ico">
+        </div>
+        <span>Hacker News</span>
+      </a>
+      <a href="https://www.theguardian.com/au">
+        <div class="icon">
+          <img src="https://www.theguardian.com/favicon.ico">
+        </div>
+        <span>The Guardian</span>
+      </a>
+      <a href="https://www.abc.net.au/news">
+        <div class="icon">
+          <img src="https://www.abc.net.au/favicon.ico">
+        </div>
+        <span>ABC News</span>
+      </a>
+      <a href="https://www.slashdot.org">
+        <div class="icon">
+          <img src="https://www.slashdot.org/favicon.ico">
+        </div>
+        <span>Slashdot</span>
+      </a>
+      <a href="https://www.theverge.com">
+        <div class="icon">
+          <img src="https://www.theverge.com/favicon.ico">
+        </div>
+        <span>The Verge</span>
+      </a>
+      <a href="https://www.arstechnica.com">
+        <div class="icon">
+          <img src="https://www.arstechnica.com/favicon.ico">
+        </div>
+        <span>Ars Technica</span>
+      </a>
+      <a href="http://news.bbc.co.uk/">
+        <div class="icon">
+          <img src="http://news.bbc.co.uk/favicon.ico">
+        </div>
+        <span>BBC News</span>
+      </a>
+      <a href="https://phoenixonrails.com/">
+        <div class="icon">
+          <img src="https://phoenixonrails.com/favicon.ico">
+        </div>
+        <span>Phoenix On Rails</span>
+      </a>
+      <a href="https://developer.mozilla.org/en-US/">
+        <div class="icon">
+          <img src="https://developer.mozilla.org/favicon.ico">
+        </div>
+        <span>MDN</span>
+      </a>
+      <a href="https://www.vox.com/">
+        <div class="icon">
+          <img src="static/img/icons/vox.png">
+        </div>
+        <span>Vox</span>
+      </a>
+      <a href="https://drawdb.vercel.app/">
+        <div class="icon">
+          <img src="https://drawdb.vercel.app/favicon.ico">
+        </div>
+        <span>
+          DrawDB
+        </span>
+      </a>
 
-        <a href="https://techcrunch.com/">
-          <div class="icon">
-            <img src="https://techcrunch.com/favicon.ico">
-          </div>
-          <span>
-            Tech Crunch
-          </span>
-        </a>
+      <a href="https://pragmaticstudio.com/">
+        <div class="icon">
+          <img src="https://pragmaticstudio.com/favicon.ico">
+        </div>
+        <span>
+          Pragmatic Studio
+        </span>
+      </a>
 
-        <a href="https://www.nyt.com">
-          <div class="icon">
-            <img src="https://www.nyt.com/favicon.ico">
-          </div>
-          <span>
-            New York Times
-          </span>
-        </a>
+      <a href="https://techcrunch.com/">
+        <div class="icon">
+          <img src="https://techcrunch.com/favicon.ico">
+        </div>
+        <span>
+          Tech Crunch
+        </span>
+      </a>
 
-        <a href="https://psyche.co/">
-          <div class="icon">
-            <img src="https://psyche.co/favicon.ico">
-          </div>
-          <span>
-            Psyche
-          </span>
-        </a>
+      <a href="https://www.nyt.com">
+        <div class="icon">
+          <img src="https://www.nyt.com/favicon.ico">
+        </div>
+        <span>
+          New York Times
+        </span>
+      </a>
 
-        <a href="https://www.strongtowns.org/">
-          <div class="icon">
-            <img src="https://www.strongtowns.org/favicon.ico">
-          </div>
-          <span>
-            Strong Towns
-          </span>
-        </a>
+      <a href="https://psyche.co/">
+        <div class="icon">
+          <img src="https://psyche.co/favicon.ico">
+        </div>
+        <span>
+          Psyche
+        </span>
+      </a>
 
-        <a href="http://www.slate.com/">
-          <div class="icon">
-            <img src="http://www.slate.com/favicon.ico">
-          </div>
-          <span>
-            Slate
-          </span>
-        </a>
+      <a href="https://www.strongtowns.org/">
+        <div class="icon">
+          <img src="https://www.strongtowns.org/favicon.ico">
+        </div>
+        <span>
+          Strong Towns
+        </span>
+      </a>
 
-        <a href="http://www.npr.org/">
-          <div class="icon">
-            <img src="http://www.npr.org/favicon.ico">
-          </div>
-          <span>
-            NPR
-          </span>
-        </a>
+      <a href="http://www.slate.com/">
+        <div class="icon">
+          <img src="http://www.slate.com/favicon.ico">
+        </div>
+        <span>
+          Slate
+        </span>
+      </a>
 
-        <a href="http://text.npr.org/">
-          <div class="icon">
-            <img src="http://text.npr.org/favicon.ico">
-          </div>
-          <span>
-            NPR
-          </span>
-        </a>
+      <a href="http://www.npr.org/">
+        <div class="icon">
+          <img src="http://www.npr.org/favicon.ico">
+        </div>
+        <span>
+          NPR
+        </span>
+      </a>
 
-        <a href="https://theworld.org">
-          <div class="icon">
-            <img src="https://theworld.org/favicon.ico">
-          </div>
-          <span>
-            The World
-          </span>
-        </a>
+      <a href="http://text.npr.org/">
+        <div class="icon">
+          <img src="http://text.npr.org/favicon.ico">
+        </div>
+        <span>
+          NPR
+        </span>
+      </a>
 
-        <a href="http://www.rollingstone.com/">
-          <div class="icon">
-            <img src="static/img/icons/rs.png">
-          </div>
-          <span>
-            Rolling Stone
-          </span>
-        </a>
+      <a href="https://theworld.org">
+        <div class="icon">
+          <img src="https://theworld.org/favicon.ico">
+        </div>
+        <span>
+          The World
+        </span>
+      </a>
 
-        <a href="http://www.medialens.org/">
-          <div class="icon">
-            <img src="http://www.medialens.org/favicon.ico">
-          </div>
-          <span>
-            Media Lens
-          </span>
-        </a>
+      <a href="http://www.rollingstone.com/">
+        <div class="icon">
+          <img src="static/img/icons/rs.png">
+        </div>
+        <span>
+          Rolling Stone
+        </span>
+      </a>
 
-        <a href="https://www.reddit.com">
-          <div class="icon">
-            <img src="https://www.reddit.com/favicon.ico">
-          </div>
-          <span>
-            Reddit
-          </span>
-        </a>
+      <a href="http://www.medialens.org/">
+        <div class="icon">
+          <img src="http://www.medialens.org/favicon.ico">
+        </div>
+        <span>
+          Media Lens
+        </span>
+      </a>
 
-        <a href="https://old.reddit.com">
-          <div class="icon">
-            <img src="https://old.reddit.com/favicon.ico">
-          </div>
-          <span>
-            Old Reddit
-          </span>
-        </a>
+      <a href="https://www.reddit.com">
+        <div class="icon">
+          <img src="https://www.reddit.com/favicon.ico">
+        </div>
+        <span>
+          Reddit
+        </span>
+      </a>
 
-        <a href="https://www.theage.com.au">
-          <div class="icon">
-            <img src="static/img/icons/theage.png">
-          </div>
-          <span>
-            The Age
-          </span>
-        </a>
+      <a href="https://old.reddit.com">
+        <div class="icon">
+          <img src="https://old.reddit.com/favicon.ico">
+        </div>
+        <span>
+          Old Reddit
+        </span>
+      </a>
 
-        <a href="https://www.smh.com.au">
-          <div class="icon">
-            <img src="static/img/icons/smh.png">
-          </div>
-          <span>
-            SMH
-          </span>
-        </a>
+      <a href="https://www.theage.com.au">
+        <div class="icon">
+          <img src="static/img/icons/theage.png">
+        </div>
+        <span>
+          The Age
+        </span>
+      </a>
 
-        <a href="https://www.theregister.com">
-          <div style="background-color:red;" class="icon">
-            <img src="https://www.theregister.com/design_picker/d518b499f8a6e2c65d4d8c49aca8299d54b03012/graphics/icon/vulture_white.png">
-          </div>
-          <span>
-            The Register 
-          </span>
-        </a>
-      </main>
-      <footer>
-        <p>Created by Michael Gardner</p>
-      </footer>
-    </div>
-  </body>
+      <a href="https://www.smh.com.au">
+        <div class="icon">
+          <img src="static/img/icons/smh.png">
+        </div>
+        <span>
+          SMH
+        </span>
+      </a>
+
+      <a href="https://www.theregister.com">
+        <div style="background-color:red;" class="icon">
+          <img
+            src="https://www.theregister.com/design_picker/d518b499f8a6e2c65d4d8c49aca8299d54b03012/graphics/icon/vulture_white.png">
+        </div>
+        <span>
+          The Register
+        </span>
+      </a>
+    </main>
+    <footer>
+      <p>Created by <a href="blog/index.html">Michael Gardner</a></p>
+    </footer>
+  </div>
+</body>
 
 </html>
